--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT) ## Description <a name=\"description\"></a> The projects aim is to be able to take notes, change notes, and remove notes in a persistent file. ## Table of Contents 1. [Description](#description) 2. [Installation](#installation) 3. [Technologies](#technologies) 4. [License](#license) 5. [Contributions](#contributions) 6. [Illustrations](#illustrations) 7. [Questions](#questions) 8. [Status](#status) 9. [Sources](#sources) ## Installation <a name=\"installation\"></a> To launch this project, access its Heroku depolyment at \"\". ## Technologies <a name=\"technologies\"></a> #### -HTML #### -Javascript #### -CSS #### -Bootstrap #### -Express #### -My README Generator ## License <a name=\"license\"></a> MIT License ## Contributions <a name=\"contributions\"></a> ##### You can make contributions to my project here!   <button target=_blank href=\"https://github.com/amandajean007\">Contribute Here</button> ## Illustrations <a name=\"illustrations\"></a> ![index capture](https://user-images.githubusercontent.com/85036414/132967951-cbcb000c-bc8a-4623-9afd-b858bd057de0.PNG) ![notes capture](https://user-images.githubusercontent.com/85036414/132967954-b43d2050-7b9a-4ae1-8972-555edd8ca7d9.PNG) ## Questions <a name=\"questions\"></a> #### If you have any questions please reach out to me via E-Mail: ahanes35@yahoo.com ## Status <a name=\"status\"></a> in progress ## Sources <a name=\"sources\"></a> Google, Stack Overflow, Github, Heroku",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/amandajean007/Note-Taker#readme",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "keywords": []
 }
