removing unneeded code

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/amandajean007/Note-Taker.git"
   },
-  "author": "",
+  "author": "Amanda McBee",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/amandajean007/Note-Taker/issues"
